--- a/style/style.css
+++ b/style/style.css
@@ -51,6 +51,7 @@ li {
   width: 130px;
   height: 40px;
 }
+
 .page-logo svg {
   width: 130px;
   height: 40px;
@@ -75,11 +76,12 @@ li {
   -webkit-text-fill-color: transparent;
   font-size: 18px;
   line-height: 21px;
+  scroll-behavior: smooth;
 }
 .promo {
   padding: 50px 0;
   min-height: 500px;
-  background-image: url(../img/background-top-promo.jpg);
+  background-image: url(../img/promo/background-top-promo.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -91,7 +93,7 @@ li {
   gap: 100px;
 }
 .promo__image {
-  background: url(../img/фото.jpg) no-repeat;
+  background: url(../img/promo/фото.jpg) no-repeat;
   background-position: center;
   background-size: cover;
   border-radius: 25px;
@@ -142,4 +144,51 @@ li {
   line-height: 23px;
   display: block;
   text-align: center;
+}
+
+.skills {
+  padding: 50px 0;
+  background: url(../img/skills/background-skills.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.skills__title {
+  margin: 0 0 70px;
+  font-size: 36px;
+  line-height: 39px;
+  font-weight: 700;
+  text-align: center;
+}
+.skills__list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+}
+.skills__item {
+}
+.skills__wrp {
+  min-height: 180px;
+  max-width: 163px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.skills__image {
+  display: block;
+  width: 96px;
+  height: 96px;
+}
+.skills__name {
+  text-shadow: 2px 4px 2px black;
+  color: #fff;
+  font-size: 20px;
+  line-height: 23px;
+  font-weight: 700;
+}
+.skills__reating .active {
+  fill: #bc6100;
 }
