--- a/style/style.css
+++ b/style/style.css
@@ -12,7 +12,7 @@ h6 {
   box-sizing: border-box;
 }
 body {
-  padding: 80px 0 0;
+  padding: 56px 0 0;
   font-family: "Philosopher", sans-serif;
 }
 
@@ -30,7 +30,15 @@ li {
   padding: 0 20px;
   box-sizing: border-box;
 }
-
+.skills__title,
+.certificates__title,
+.projects__title {
+  margin: 0 0 70px;
+  font-size: 36px;
+  line-height: 39px;
+  font-weight: 700;
+  text-align: center;
+}
 .page-header {
   position: fixed;
   top: 0;
@@ -39,7 +47,7 @@ li {
   opacity: 0.9;
   box-shadow: 0 8px 30px black;
   background-color: rgb(223 223 223);
-  padding: 20px 0;
+  padding: 8px 0;
 }
 .page-header__wrp {
   display: flex;
@@ -145,26 +153,34 @@ li {
   display: block;
   text-align: center;
 }
-
+.certificates {
+  padding: 50px 0;
+  background-color: #f1f1f1;
+}
+.certificates__image-wrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+}
+.certificates__image {
+  display: block;
+}
 .skills {
   padding: 50px 0;
   background: url(../img/skills/background-skills.jpg) no-repeat;
   background-position: center;
   background-size: cover;
 }
-.skills__title {
-  margin: 0 0 70px;
-  font-size: 36px;
-  line-height: 39px;
-  font-weight: 700;
-  text-align: center;
-}
+
 .skills__list {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
-  gap: 10px;
+  gap: 20px;
 }
 .skills__item {
 }
@@ -191,4 +207,94 @@ li {
 }
 .skills__reating .active {
   fill: #bc6100;
+}
+.projects {
+  padding: 50px 0;
+  background: #f1f1f1;
+}
+/* slider */
+.slider {
+  position: relative;
+  max-width: 1200px;
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.slider-line {
+  background-color: #f1f1f1;
+  display: flex;
+  align-items: center;
+  transition: all 3s ease;
+}
+.slider-image {
+  width: 100%;
+}
+.slider-prev,
+.slider-next {
+  width: 50px;
+  height: 50px;
+}
+.slider-prev {
+  transform: rotate(180deg);
+  position: absolute;
+  left: 1%;
+  top: 50%;
+  background: url(../img/slider-projects/slider-arrow1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: none;
+}
+.slider-next {
+  position: absolute;
+  right: 1%;
+  top: 50%;
+  background: url(../img/slider-projects/slider-arrow1.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border: none;
+}
+.slider-wrapper {
+  display: flex;
+  column-gap: 10px;
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.slider-dot {
+  width: 16px;
+  height: 16px;
+  background: url(../img/slider-projects/slider-circle.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  caret-color: transparent;
+}
+.slider-dot:hover {
+  transform: scale(1.3);
+}
+.active-dot {
+  transform: scale(1.3);
+
+  background: url(../img/slider-projects/slider-circle-active.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+@media (max-width: 1200px) {
+  .slider-next,
+  .slider-prev {
+    width: calc(20px + (50 - 20) * ((100vw - 320px) / (850 - 320)));
+    height: calc(20px + (50 - 20) * ((100vw - 320px) / (850 - 320)));
+  }
+  .slider-dot {
+    width: calc(10px + (16 - 10) * ((100vw - 320px) / (850 - 320)));
+    height: calc(10px + (16 - 10) * ((100vw - 320px) / (850 - 320)));
+  }
+  .slider-wrapper {
+    column-gap: calc(15px + (10 - 15) * ((100vw - 320px) / (850 - 320)));
+  }
 }
