--- a/style/style.css
+++ b/style/style.css
@@ -42,7 +42,7 @@ img {
 .certificates__title,
 .projects__title,
 .page-footer__title {
-  margin: 0 0 70px;
+  margin: 0 0 40px;
   font-size: 36px;
   line-height: 39px;
   font-weight: 700;
@@ -177,80 +177,15 @@ img {
   border-width: 2px;
   border-image-source: linear-gradient(to right, #1246e2, #034b81, #8c59d9);
 }
-.certificates {
-  padding: 50px 0;
-  background-color: #f1f1f1;
-}
-.certificates__title,
-.projects__title {
-  color: black;
-  text-shadow: 0px 0px 10px #034b81;
-}
-.certificates__image-wrapper {
-  padding: 0 0 40px;
-  overflow-x: scroll;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: 55px;
-}
-.certificates__image {
-  display: block;
-}
-.skills {
-  padding: 50px 0;
-  background: url(../img/skills/background-skills.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
-}
-.skills__title {
-  text-shadow: 2px 4px 2px black;
-  color: #fff;
-}
-.skills__list {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  gap: 20px;
-}
-.skills__item {
-}
-.skills__wrp {
-  min-height: 180px;
-  max-width: 163px;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-}
-.skills__image {
-  display: block;
-  width: 96px;
-  height: 96px;
-}
-.skills__name {
-  text-shadow: 2px 4px 2px black;
-  color: #fff;
-  font-size: 20px;
-  line-height: 23px;
-  font-weight: 700;
-}
-.skills__reating .active {
-  fill: #bc6100;
-}
 .projects {
   padding: 50px 0 70px;
   background: #f1f1f1;
 }
 .slider__link-wrp {
+  background-color: rgba(223, 223, 223, 0.4);
 }
 .slider__link-wrp > div {
   padding: 0 15px;
-  margin: 0 0 5px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -258,32 +193,24 @@ img {
 .slider__subtitle {
   max-width: 520px;
   width: 100%;
-  background-image: linear-gradient(90deg, #1246e2, #034b81, #8c59d9);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 4px 2px #cfcfcf;
+  color: #5a5a5a;
   padding: 10px 0 0 0;
   font-weight: 700;
-  font-size: 24px;
+  font-size: 22px;
   line-height: 26px;
   text-align: center;
   margin: 0 auto 5px;
 }
 .slider__link-site,
 .slider__link-code {
-  color: black;
-  background-image: linear-gradient(90deg, #1246e2, #8c59d9);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  text-shadow: 2px 4px 2px #cfcfcf;
+  color: #5a5a5a;
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
-  text-decoration: underline;
 }
-.slider__link-code {
-  background-image: linear-gradient(90deg, #8c59d9, #1246e2);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+
 /* slider */
 .slider {
   box-shadow: 0px 0px 20px grey;
@@ -302,7 +229,7 @@ img {
 }
 
 .slider-image {
-  height: 92%;
+  height: calc(100% - 60px);
   width: 100%;
 }
 .slider-prev,
@@ -361,6 +288,108 @@ img {
 }
 
 /* slider end */
+
+.skills {
+  padding: 50px 0;
+  background: url(../img/skills/background-skills.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+.skills__title {
+  text-shadow: 2px 4px 2px black;
+  color: #fff;
+}
+.skills__list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.skills__item {
+}
+.skills__wrp {
+  min-height: 180px;
+  max-width: 163px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.skills__image {
+  display: block;
+  width: 96px;
+  height: 96px;
+}
+.skills__name {
+  text-shadow: 2px 4px 2px black;
+  color: #fff;
+  font-size: 20px;
+  line-height: 23px;
+  font-weight: 700;
+}
+.skills__reating .active {
+  fill: #bc6100;
+}
+.certificates {
+  padding: 50px 0;
+  background-color: #f1f1f1;
+}
+.faq {
+  max-width: 800px;
+  margin: 20px auto;
+}
+
+.faq-item {
+  position: relative;
+  box-shadow: 0 0 15px rgb(189, 189, 189);
+  border-radius: 10px;
+  margin: 0 0 10px;
+}
+.faq-title::after {
+  content: "+";
+  position: absolute;
+  top: 23px;
+  right: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+  color: #8c59d9;
+  width: 20px;
+  height: 20px;
+}
+.faq-title {
+  padding: 20px 25px;
+  display: block;
+  font-size: 24px;
+  line-height: 27px;
+  font-weight: 700;
+  color: #5a5a5a;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+.faq-input {
+  width: 0;
+  height: 0;
+  position: absolute;
+  -webkit-appearance: none;
+  appearance: none;
+}
+.faq-input:checked ~ .faq-text {
+  display: block;
+}
+.faq-input:checked ~ .faq-title::after {
+  content: "-";
+}
+.faq-text {
+  display: none;
+  padding: 10px 15px;
+  font-size: 14px;
+  color: black;
+}
 
 .page-footer {
   padding: 30px 0;
@@ -478,13 +507,17 @@ img {
     line-height: 21px;
   }
   .slider__subtitle {
-    font-size: 20px;
-    line-height: 22px;
+    font-size: 18px;
+    line-height: 21px;
   }
   .slider__link-code,
   .slider__link-site {
-    font-size: 14px;
+    font-size: 13px;
     line-height: 16px;
+  }
+  .slider-image {
+    height: calc(100% - 52px);
+    width: 100%;
   }
 }
 
