--- a/style/style.css
+++ b/style/style.css
@@ -337,31 +337,19 @@ img {
   padding: 50px 0;
   background-color: #f1f1f1;
 }
-.faq {
+.certificates__accordion {
   max-width: 800px;
   margin: 20px auto;
 }
 
-.faq-item {
+.accordion__item {
   position: relative;
   box-shadow: 0 0 15px rgb(189, 189, 189);
   border-radius: 10px;
   margin: 0 0 10px;
 }
-.faq-title::after {
-  content: "+";
-  position: absolute;
-  top: 23px;
-  right: 25px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 30px;
-  color: #8c59d9;
-  width: 20px;
-  height: 20px;
-}
-.faq-title {
+
+.accordion__title {
   padding: 20px 25px;
   display: block;
   font-size: 24px;
@@ -369,28 +357,49 @@ img {
   font-weight: 700;
   color: #5a5a5a;
   cursor: pointer;
-  transition: 0.5s ease-in-out;
 }
-.faq-input {
+.accordion__title::after {
+  content: "";
+  position: absolute;
+  top: 23px;
+  right: 25px;
+  background: url(../img/sertificats/plus-icon.png) no-repeat center / cover;
+  width: 20px;
+  height: 20px;
+  transition: all 0.5s ease-in-out;
+}
+.accordion__input {
   width: 0;
   height: 0;
   position: absolute;
   -webkit-appearance: none;
   appearance: none;
 }
-.faq-input:checked ~ .faq-text {
+.accordion__input:checked ~ .accordion__body-wrapper {
   display: block;
 }
-.faq-input:checked ~ .faq-title::after {
-  content: "-";
+.accordion__input:checked ~ .accordion__title::after {
+  background-image: url(../img/sertificats/minus-icon.png);
 }
-.faq-text {
+.accordion__body-wrapper {
   display: none;
-  padding: 10px 15px;
-  font-size: 14px;
+  padding: 10px 25px;
   color: black;
 }
-
+.accordion__body {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px;
+}
+.accordion__body > a {
+  font-size: 20px;
+  line-height: 21px;
+  font-weight: 400;
+  background-image: linear-gradient(90deg, #1246e2, #034b81, #8c59d9);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 .page-footer {
   padding: 30px 0;
   background-color: rgba(223, 223, 223, 0.8);
@@ -495,17 +504,6 @@ img {
     font-size: 19px;
     line-height: 21px;
   }
-  .skills__title,
-  .certificates__title,
-  .projects__title,
-  .page-footer__title {
-    font-size: 26px;
-    line-height: 29px;
-  }
-  .skills__name {
-    font-size: 19px;
-    line-height: 21px;
-  }
   .slider__subtitle {
     font-size: 18px;
     line-height: 21px;
@@ -518,6 +516,26 @@ img {
   .slider-image {
     height: calc(100% - 52px);
     width: 100%;
+  }
+  .skills__title,
+  .certificates__title,
+  .projects__title,
+  .page-footer__title {
+    font-size: 26px;
+    line-height: 29px;
+  }
+  .skills__name {
+    font-size: 19px;
+    line-height: 21px;
+  }
+
+  .accordion__title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+  .accordion__body > a {
+    font-size: 15px;
+    line-height: 19px;
   }
 }
 
