--- a/style/hover-animation.css
+++ b/style/hover-animation.css
@@ -20,6 +20,15 @@
   .slider__link-site:hover {
     text-decoration: underline;
   }
+  .slider-next:hover {
+    transform: scale(1.1);
+  }
+  .slider-prev:hover {
+    transform: rotate(180deg) scale(1.1);
+  }
+  .slider-dot:hover {
+    transform: scale(1.3);
+  }
   .page-footer__link-icon:hover {
     animation: none;
     transform: scale(1.2);
@@ -29,6 +38,14 @@
   .page-footer__link-icon:active {
     transform: scale(1.1);
     opacity: 0.5;
+  }
+  .accordion__item:hover {
+    box-shadow: 0 0 15px black;
+    transform: scale(1.005);
+  }
+  .accordion__body > a:hover {
+    transform: scale(1.015);
+    text-shadow: 0 0 15px rgb(75, 74, 74);
   }
 }
 
@@ -42,5 +59,20 @@
 
   100% {
     transform: scale(0.8);
+  }
+}
+@keyframes rotateIcon {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: scale(1.5);
+  }
+  75% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform:  rotate(180deg) scale(1);
   }
 }
