--- a/style/style.css
+++ b/style/style.css
@@ -198,7 +198,8 @@ label {
   text-align: center;
   border-image-slice: 1;
   border-width: 2px;
-  border-image-source: linear-gradient(to right, #1246e2, #034b81, #8c59d9);
+  animation: backgroundButton 10s infinite;
+  animation-timing-function: linear;
 }
 
 .projects {
@@ -509,17 +510,32 @@ label {
 }
 
 .page-footer__wrapper {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
 
+.page-footer__wrapper::after {
+  content: "";
+  position: absolute;
+  height: 1px;
+  background: #9a9a9a;
+  opacity: 0.4;
+  top: 60px;
+  left: 0;
+  right: 0;
+}
+
 .page-footer__icon-wrp {
+  outline: 1px solid #9a9a9a;
   background-color: #fff;
+  box-shadow: 0 0 15px rgb(189, 189, 189);
   border-radius: 10px;
   max-width: 220px;
   width: 100%;
+  min-height: 40px;
   display: flex;
   flex-direction: row;
   align-items: center;
