--- a/style/style.css
+++ b/style/style.css
@@ -91,8 +91,6 @@ label {
   height: 40px;
 }
 
-.page-header__nav {}
-
 .page-header__nav-list {
   display: flex;
   flex-direction: row;
@@ -105,8 +103,6 @@ label {
 .mobile-menu {
   display: none;
 }
-
-.page-header__nav-item {}
 
 .page-header__item-link {
   color: black;
@@ -342,8 +338,6 @@ label {
   gap: 20px;
 }
 
-.skills__item {}
-
 .skills__wrp {
   min-height: 180px;
   max-width: 170px;
@@ -505,11 +499,12 @@ label {
 }
 
 .page-footer {
-  padding: 30px 0;
+  padding: 30px 0 20px;
   background-color: rgba(223, 223, 223, 0.8);
 }
 
 .page-footer__wrapper {
+  margin: 0 0 40px;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -523,7 +518,7 @@ label {
   height: 1px;
   background: #9a9a9a;
   opacity: 0.4;
-  top: 60px;
+  top: 157px;
   left: 0;
   right: 0;
 }
@@ -562,6 +557,16 @@ label {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.page-footer__copyright>span {
+  display: block;
+  text-align: center;
+  font-size: 18px;
+  line-height: 21px;
+  color: #313131;
+}
+
+
 
 @media (max-width: 1200px) {
 
@@ -677,6 +682,10 @@ label {
   .accordion__body>a {
     font-size: 15px;
     line-height: 19px;
+  }
+
+  .page-footer__wrapper::after {
+    top: 137px;
   }
 }
 
