--- a/style/style.css
+++ b/style/style.css
@@ -384,9 +384,10 @@ label {
 }
 
 .accordion__title {
+  display: flex;
+  align-items: center;
   padding: 20px 25px;
   border-radius: 10px;
-  display: block;
   font-size: 24px;
   line-height: 27px;
   font-weight: 700;
@@ -399,7 +400,6 @@ label {
 .accordion__title::after {
   content: "";
   position: absolute;
-  top: 23px;
   right: 25px;
   background: url(../img/sertificats/plus-icon.png) no-repeat center / cover;
   width: 20px;
