--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,26 @@
 @import url(mobile-menu.css);
 @import url(hover-animation.css);
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: rgba(223, 223, 223, 0.8);
+  box-shadow: 0 0 5px black inset;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(to bottom, #1246e2, #034b81, #8c59d9);
+  border-radius: 20px;
+  border: 2px solid rgba(223, 223, 223, 0.8);
+}
+
+html {
+  scrollbar-color: #034b81 #cfcfcf;
+  scrollbar-width: thin;
+}
+
 *,
 *::after,
 *::before,
